--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.example</groupId>
+    <artifactId>employee_form</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+
     <dependencies>
-         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.14</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
-    <groupId>org.example</groupId>
-    <artifactId>employee_form</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
